Update logica
